--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "dependencies": {
     "ejs": "^3.1.8",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "nodemon": "^2.0.20"
   },
   "name": "login-lecture",
   "description": "`인증과 인가` 누가, 언제, 어떻게 쓰고 있는가를 파악하기 위해 어떤 사이트에서 인증, 인가가 있음 인증과 인가는 API에서 가장 자주 구현되는 기능중 하나",
@@ -10,10 +11,9 @@
   "bin": {
     "login-lecture": "www.js"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./bin/www.js"
+    "dev": "nodemon ./bin/www.js"
   },
   "repository": {
     "type": "git",
