--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
     "body-parser": "^1.20.1",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "fs": "^0.0.1-security",
     "nodemon": "^2.0.20"
   },
   "name": "login-lecture",
