--- a/app/package.json
+++ b/app/package.json
@@ -1,9 +1,11 @@
 {
   "dependencies": {
     "body-parser": "^1.20.1",
+    "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   },
   "name": "login-lecture",
