--- a/app/package.json
+++ b/app/package.json
@@ -5,6 +5,7 @@
     "ejs": "^3.1.8",
     "express": "^4.18.2",
     "fs": "^0.0.1-security",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.20"
   },
